--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
                 <div id="tool-hint" class="tool-hint">
                     💡 Click a hex to paint the selected color
                 </div>
+                <div class="input-row" style="margin-top: 0.5rem;">
+                    <label>
+                        <input type="checkbox" id="gradient-dither">
+                        Dither
+                    </label>
+                    <input type="range" id="dither-intensity" min="0" max="20" value="5" step="1" disabled>
+                    <input type="number" id="dither-intensity-input" min="0" max="20" value="5" style="width: 3rem;" disabled>
+                </div>
                 <button id="generate-gradient" class="btn btn-secondary">Generate Gradient</button>
                 <button id="clear-anchors" class="btn btn-small">Clear Anchors</button>
                 <button id="clear-grid" class="btn btn-small btn-danger">Clear All</button>
